--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
     <script src="node_modules/react/dist/react.js"></script>
     <script src="obj/lodash/lodash.build.min.js"></script>
-    <script src="obj/es5/compiled.min.js"></script>
+    <script src="obj/es5/compiled.js"></script>
 </head>
 <body></body>
 </html>
