Build to package

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script src="obj/es5/compiled.js"></script>
+    <script src="dist/webarch.min.js"></script>
 </head>
 <body></body>
 </html>
